tests/fails/f27.t

terra foo()
    return niltype(8)
end
foo()
